# GUITest

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  MirabelFilter.h  MirabelFilter.hxx  main.cxx  mainwindow.cxx  mainwindow.h  mainwindow.hxx  mainwindow.ui  moc_mainwindow.cpp_parameters
